--- a/examples/todo_flutter/pubspec.yaml
+++ b/examples/todo_flutter/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   etos_flutter:
     path: ../../etos_flutter
   equatable: ^2.0.5
+  logging: ^1.0.2
 
 dev_dependencies:
   flutter_test:
