Update pubspec path to etos on git

--- a/etos_flutter/pubspec.yaml
+++ b/etos_flutter/pubspec.yaml
@@ -11,7 +11,9 @@ dependencies:
   flutter:
     sdk: flutter
   etos:
-    path: ../etos
+    git:
+      url: git@github.com:SEGVeenstra/etos.git
+      path: etos
 
 dev_dependencies:
   flutter_test:
