Preparing packages for pub.dev release

--- a/etos/pubspec.yaml
+++ b/etos/pubspec.yaml
@@ -1,6 +1,8 @@
 name: etos
-description: A starting point for Dart libraries or applications.
-version: 1.0.0
+description: 
+  An event-driven state management solution.
+version: 0.0.1
+repository: https://github.com/SEGVeenstra/etos
 # homepage: https://www.example.com
 
 environment:
