--- a/etos_flutter/pubspec.yaml
+++ b/etos_flutter/pubspec.yaml
@@ -10,10 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  etos:
-    git:
-      url: git@github.com:SEGVeenstra/etos.git
-      path: etos
+  etos: ^0.0.1
 
 dev_dependencies:
   flutter_test:
