--- a/examples/todo_flutter/pubspec.yaml
+++ b/examples/todo_flutter/pubspec.yaml
@@ -11,8 +11,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-  etos_flutter:
-    path: ../../etos_flutter
+  etos_flutter: 0.0.1
   equatable: ^2.0.5
   logging: ^1.0.2
 
