--- a/etos_flutter/pubspec.yaml
+++ b/etos_flutter/pubspec.yaml
@@ -1,7 +1,7 @@
 name: etos_flutter
 description: Helper widgets for Etos
 version: 0.0.1
-homepage:
+repository: https://github.com/SEGVeenstra/etos
 
 environment:
   sdk: ">=2.17.6 <3.0.0"
